--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>Manuscripts</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./public/style.css">
   <script type="module" src="./dist/bundle.js" defer></script>
 </head>
 <body>
